--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
             top: 40px;
         }
 
-        @media(min-width:500px) {
+       @media(min-width:800px) {
+            body {
+                background-repeat: repeat-y;
+            }
+        }
+
+        @media(min-width:300px) {
             body {
                 background-repeat: repeat-y;
             }
